--- a/QuickNotes/QuickNotes.csproj
+++ b/QuickNotes/QuickNotes.csproj
@@ -144,6 +144,7 @@
     <Content Include="Content\carousel.css" />
     <Content Include="Content\images\carousel\img_1.jpg" />
     <Content Include="Content\images\loader.gif" />
+    <Content Include="Content\sticky.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
